--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
 	<title>Market</title>
 </head>
 <body>
@@ -40,7 +44,14 @@
 				</div>
 
 			</div>
-			<div class="search_right"></div>
+			<div class="search_right justify" >
+				
+				<ul class="justify">
+					<li><i class="uil uil-bookmark-full"><a href="#">Отложено</a></i></li>
+				    <li><i class="uil uil-angry"><a href="#">Войти</a></i></li>
+				    <li><i class="uil uil-shopping-basket"><a href="#">Корзина</a></i></li>
+				</ul>
+			</div>
 		</div>
 		<div class="nav">
 			
