--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div class="about justify">
 			<div class="about_left justify">
 				<ul class="justify">
-					<li><i class="uil uil-location-point"><a href="#">Москва</a></i> </li>
+					<li><a href="#"><i class="uil uil-location-point"></i>Москва</a> </li>
 				    <li><i class="uil uil-wallet"><a href="#">Доставка и оплата</a></i></li>
 				    <li><i class="uil uil-sign-alt"><a href="#">Адрес и часы работы</a></i></li>
 			    </ul>
@@ -55,6 +55,14 @@
 		</div>
 		<div class="nav">
 			
+			<ul class="justify_start">
+				<li><a href="#"><i class="uil uil-list-ul"></i></a><a href="#">Каталог</a></li>
+				<li><a href="#">Авторы</a></li>
+				<li><a href="#">Новинки</a></li>
+				<li><a href="#"><i class="uil uil-tag"></i>Скидки</a></li>
+				<li><a href="#">Партнёрам</a></li>
+				<li><a href="#">Мы</a></li>
+			</ul>
 		</div>
 	</header>
 </body>
