--- a/index.html
+++ b/index.html
@@ -110,8 +110,24 @@
 					</div>
 				</div>
 			</div>
-			<div class="main_right"><a href="#"><img src="img/book.png" alt=""></a></div>
+			<div class="main_right">	
+				
+				
+				<div class="justify_around">
+					<h3>Книга дня</h3>
+					<div class="clock">99.33.88</div></div>
+			<a href="#">
+				<div class="main_img "><img src="img/book.png" alt=""></div>
+				<p>Корпоративное право</p>
+				<h4>Инвестирование: способы, риски, субъекты : монография</h4>
+				<h4>4 450 ₽</h4>
+			</a>
+<div class="main_button">	
+	<button class="basket"> <i class="uil uil-shopping-basket"></i><span>В корзину</span>		</button>
+	<button class = "flag"><i class="uil uil-bookmark-full"><a href="#"></a></i></button>
+</div>		
 		</div>
+		
 
 
 
